# KWU-Assignment

./: README.md
Big data/: bodyfat.csv  bodyfat.ipynb  코로나 날짜별 증감률.ipynb
Computer Vision/문다예_2021204013_HW_01/: CMakeLists.txt
Computer Vision/문다예_2021204013_HW_01/HW_01_01_draw_rectangles/: HW_01_01_draw_rectangles.cpp
Computer Vision/문다예_2021204013_HW_01/HW_01_02_draw_rectangles_correctly/: HW_01_02_draw_rectangles_correctly.cpp
Computer Vision/문다예_2021204013_HW_01/HW_01_03_draw_rectangles_and_ellipses/: HW_01_03_draw_rectangles_and_ellipses.cpp
Computer Vision/문다예_2021204013_HW_01/HW_01_04_draw_rectangles_ellipses_and_brush/: HW_01_04_draw_rectangles_ellipses_and_brush.cpp
Computer Vision/문다예_2021204013_HW_02/: CMakeLists.txt
Computer Vision/문다예_2021204013_HW_03/: CMakeLists.txt
Computer Vision/문다예_2021204013_HW_03/HW_03_01_translation/: HW_03_01_translation.cpp
Computer Vision/문다예_2021204013_HW_03/HW_03_02_translation_original/: HW_03_02_translation_original.cpp
Computer Vision/문다예_2021204013_HW_03/HW_03_03_scaling/: HW_03_03_scaling.cpp
Computer Vision/문다예_2021204013_HW_03/HW_03_04_scaling_center/: HW_03_04_scaling_center.cpp
Computer Vision/문다예_2021204013_HW_03/HW_03_05_translation_scaling/: HW_03_05_translation_scaling.cpp
Computer Vision/문다예_2021204013_HW_03/HW_03_06_rotation_translation_scaling/: HW_03_06_rotation_translation_scaling.cpp
Data Mining/데이터마이닝/: 1128나라 문제 컬럼 결측치 제거 코드 GDP 기준.ipynb  (+15 more)
Data Science/: main.py
Data structure/: BinarySearchTree.py
Interactive Media/: 2021204013 문다예 프로젝트 설명서.pptx  Animation Film.html  Classic Film.html  Hero Film.html  Korean Film.html  index.html
Java kiosk Project/: 2021204013 문다예 프로젝트 기획서.pptx
Moblie Programming/: AndroidManifest.xml
Server Programming/: index.jsp  insert.jsp  view.jsp
(+19 files in other folders)
